<resources>
    <string name="app_name">TUFootCarbon</string>
    <string name="facebook_application_id" translatable="false">583575482267460</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb583575482267460</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="swipe_delete">Swipe to Delete</string>

    <string name="menu_home">My Carbon Footprint</string>
    <string name="menu_electricity">Electricity Consumption</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_water_usage">Water Usage</string>
    <string name="menu_flights">Flights</string>
    <string name="menu_mobility">Mobility</string>
    <string name="menu_menu_home_utilities">Home Utilities</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_car">Car</string>

    <string name="car_update">This section is in development. Will be available next update!</string>



    <string name="electricity_consumption">Electricity Consumption kWh</string>
    <string name="calculate_button">Add</string>
    <string name="electricity_hint">Monthly Consumption</string>



    <string name="water_hint">Times per Day /Hours per Day for taps</string>
    <string name="water_type">Type</string>
    <string name="water_amount">Amount</string>

    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="passenger_class">Class</string>
    <string name="journeys">Journeys</string>
    <string name="Return">Return</string>



    <string name="about_icons">|  Icons</string>
    <string name="about_api">|  CarbonKit</string>
    <string name="about_description">This app is using an open-source API to measure the carbon footprint.
        All the external resources used are presented below:
    </string>

    <string name="tips">Tips: Offset your carbon, plant trees, recycle and use green energy!</string>

</resources>
